--- a/CrudeOilApp.ini
+++ b/CrudeOilApp.ini
@@ -1,12 +1,11 @@
-Description=uWsgi instance to serve CrudeOilApp
-After=network.target
+[uwsgi]
+module = wsgi:app
 
-[Service]
-User=khan
-Group=www-data
-WorkingDirectory=/home/khan/CrudeOilApp
-Environment="PATH=/home/khan/CrudeOilApp/energyenv/bin"
-ExecStart="/home/khan/CrudeOilApp/energyenv/bin/uwsgi --ini CrudeOilApp.ini"
+master=true
+processes = 5
 
-[Install]
-WantedBy=multi-user.target
+socket = crudesock.sock
+chmod-socket = 660
+vacuum = true
+
+die-on-term = true
